# SM2ACM3k1

./: .directory  .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md  SM2ACM3k1.kdev4
.kdev4/: SM2ACM3k1.kdev4  SM2ACM3k1.kdev4.orig  _custom.kdev4
Content/: Config.cfg  Music.lua  testComponent.lua
VSBuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  SM2ACM3k1.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
VSBuild/Win32/Debug/ZERO_CHECK/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
VSBuild/src/client/: client.vcxproj  client.vcxproj.filters  cmake_install.cmake
VSBuild/src/client/Debug/: client.sln  gofor.ppk  id_rsa  id_rsa_framework  key.ppk  map.txt  privkey.ppk  pubKey.ppk  thisPrive.ppk
VSBuild/src/client/Debug/Content/: my_will_ed.mid
VSBuild/src/client/client.dir/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  client.lastbuildstate  client_manifest.rc  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
VSBuild/src/server/: cmake_install.cmake  server.vcxproj  server.vcxproj.filters
VSBuild/src/server/Debug/: server.ilk
VSBuild/src/server/server.dir/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  server.vcxprojResolveAssemblyReference.cache  server_manifest.rc
include/client/: .Map.h.kate-swp  ClientMapLoader.h  Game.hpp  Game.hpp.orig  Game.hpp~  HUD.cpp~  HUD.h  HUD.h~  Map.h  MapLoader.h  Player.h  Players.h  RemotePlayer.h  SpriteSheet.h  SpriteSheetAnimator.h  TCP_Net2.hpp  UIComponent.hpp  UIComponent.hpp~  WorkQueues.h  tcp_net.h
include/client/Map/: Tile.hpp
include/client/Players/: PlayerInformation.hpp  PlayerInformation.hpp~
include/client/UI/: UI_Elements.hpp  UI_Elements.hpp~  UI_LuaFunctions.hpp  UI_LuaFunctions.hpp~
include/server/: Game.hpp  Game.hpp~  Match.h  PacketRoutines.h  Packets.h  ServMapLoader.h  TCP_Net_Manager.h  TCP_Net_Serv2.hpp  tcp_net_serv.h
include/shared/: Enums.h  MapLoader.h  Packets.h  out_helper.h  randomc.h
src/: CMakeLists.txt  CMakeLists.txt~
src/client/: .directory  CMakeLists.txt  CMakeLists.txt.orig  CMakeLists.txt~  ClientMapLoader.cpp  Game.cpp  Game.cpp.bkup  Game.cpp~  Game.cpp~.BACKUP.20200.cpp~  Game.cpp~.BASE.20200.cpp~  Game.cpp~.LOCAL.20200.cpp~  Game.cpp~.REMOTE.20200.cpp~  HUD.cpp  HUD.cpp~  Main.cpp  Main.cpp~  Map.cpp  Map.cpp~  MapLoader.cpp  MapLoader.cpp~  Player.cpp  Player.cpp~  Players.cpp  RemotePlayer.cpp  SpriteSheet.cpp  SpriteSheetAnimator.cpp  TCP_Net2.cpp  UIComponent.cpp  UIComponent.cpp~  WorkQueues.cpp  mersenne.cpp  tcp_net.cpp
src/client/Content/: testUI.lua  testUI.lua~
src/client/Map/: Tile.cpp
src/client/Player/: PlayerInformation.hpp  PlayerInformation.hpp~
src/client/Players/: PlayerInformation.cpp  PlayerInformation.cpp~
src/client/UI/: .UI_LuaFunctions.cpp.kate-swp  UI_Elements.cpp  UI_Elements.cpp~  UI_LuaFunctions.cpp  UI_LuaFunctions.cpp~
src/server/: CMakeLists.txt  CMakeLists.txt~  Game.cpp  Game.cpp~  Main.cpp  Main.cpp~  Match.cpp  PacketRoutines.cpp  ServMapLoader.cpp  TCP_Net_Manager.cpp  TCP_Net_Serv2.cpp  tcp_net_serv.cpp
src/shared/: MapLoader.cpp  Packets.cpp  mersenne.cpp
